@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [Ncat] Applied a blocking-socket workaround for a bug that could
+  prevent some sends from working in listen mode. The problem was
+  reported by Jonas Wielicki. [Alex Weber, David Fifield]
+
 o Protocol scan (-sO) probes for TCP, UDP, and SCTP now go to ports
   80, 40125, and 80 respectively, instead of being randomly generated
   or going to the same port as the source port. [David Fifield]
